; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/card/extr_sdio_uart.c_sdio_uart_update_mctrl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/card/extr_sdio_uart.c_sdio_uart_update_mctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdio_uart_port = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sdio_uart_port*, i32, i32)* @sdio_uart_update_mctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdio_uart_update_mctrl(%struct.sdio_uart_port* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.sdio_uart_port*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.sdio_uart_port* %0, %struct.sdio_uart_port** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.sdio_uart_port*, %struct.sdio_uart_port** %4, align 8
  %9 = getelementptr inbounds %struct.sdio_uart_port, %struct.sdio_uart_port* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %6, align 4
  %13 = xor i32 %12, -1
  %14 = and i32 %11, %13
  %15 = load i32, i32* %5, align 4
  %16 = or i32 %14, %15
  %17 = load %struct.sdio_uart_port*, %struct.sdio_uart_port** %4, align 8
  %18 = getelementptr inbounds %struct.sdio_uart_port, %struct.sdio_uart_port* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* %7, align 4
  %20 = load %struct.sdio_uart_port*, %struct.sdio_uart_port** %4, align 8
  %21 = getelementptr inbounds %struct.sdio_uart_port, %struct.sdio_uart_port* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = icmp ne i32 %19, %22
  br i1 %23, label %24, label %30

24:                                               ; preds = %3
  %25 = load %struct.sdio_uart_port*, %struct.sdio_uart_port** %4, align 8
  %26 = load %struct.sdio_uart_port*, %struct.sdio_uart_port** %4, align 8
  %27 = getelementptr inbounds %struct.sdio_uart_port, %struct.sdio_uart_port* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @sdio_uart_write_mctrl(%struct.sdio_uart_port* %25, i32 %28)
  br label %30

30:                                               ; preds = %24, %3
  ret void
}

declare dso_local i32 @sdio_uart_write_mctrl(%struct.sdio_uart_port*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
